--- a/requirements.txt
+++ b/requirements.txt
@@ -1,108 +1,4 @@
-altair==4.2.0
-anyio==3.6.2
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-attrs==22.1.0
-backcall==0.2.0
-backports.zoneinfo==0.2.1
-beautifulsoup4==4.11.1
-biotite==0.35.0
-bleach==5.0.1
-blinker==1.5
-cachetools==5.2.0
-certifi==2022.12.7
-cffi==1.15.1
-charset-normalizer==2.1.1
-click==8.1.3
-colorama==0.4.6
-commonmark==0.9.1
-debugpy==1.6.4
-decorator==5.1.1
-defusedxml==0.7.1
-deprecation==2.1.0
-entrypoints==0.4
-fastjsonschema==2.16.2
-gitdb==4.0.10
-GitPython==3.1.29
-idna==3.4
-importlib-metadata==5.2.0
-importlib-resources==5.10.1
-ipykernel==6.16.2
-ipyspeck==0.6.1
-ipython==7.34.0
-ipython-genutils==0.2.0
-ipywidgets==7.6.3
-jedi==0.18.2
-Jinja2==3.1.2
-jsonschema==4.17.3
-jupyter-client==7.4.8
-jupyter-core==4.12.0
-jupyter-packaging==0.12.3
-jupyter-server==1.23.3
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.4
-MarkupSafe==2.1.1
-matplotlib-inline==0.1.6
-mistune==2.0.4
-msgpack==1.0.4
-nbclassic==0.4.8
-nbclient==0.7.2
-nbconvert==7.2.6
-nbformat==5.7.0
-nest-asyncio==1.5.6
-networkx==2.6.3
-notebook==6.5.2
-notebook-shim==0.2.2
-numpy==1.21.6
-packaging==22.0
-pandas==1.3.5
-pandocfilters==1.5.0
-parso==0.8.3
-pickleshare==0.7.5
-Pillow==9.3.0
-pkgutil-resolve-name==1.3.10
-prometheus-client==0.15.0
-prompt-toolkit==3.0.36
-protobuf==3.20.3
-psutil==5.9.4
-py3Dmol==1.8.1
-pyarrow==10.0.1
-pycparser==2.21
-pydeck==0.8.0
-Pygments==2.13.0
-Pympler==1.0.1
-pyrsistent==0.19.2
-python-dateutil==2.8.2
-pytz==2022.7
-pytz-deprecation-shim==0.1.0.post0
-pywin32==305
-pywinpty==2.0.9
-pyzmq==24.0.1
-requests==2.28.1
-rich==12.6.0
-semver==2.13.0
-Send2Trash==1.8.0
-six==1.16.0
-smmap==5.0.0
-sniffio==1.3.0
-soupsieve==2.3.2.post1
-stmol==0.0.9
-streamlit==1.16.0
-terminado==0.17.1
-tinycss2==1.2.1
-toml==0.10.2
-tomlkit==0.11.6
-toolz==0.12.0
-tornado==6.2
-traitlets==5.7.1
-typing-extensions==4.4.0
-tzdata==2022.7
-tzlocal==4.2
-urllib3==1.26.13
-validators==0.20.0
-watchdog==2.2.0
-wcwidth==0.2.5
-webencodings==0.5.1
-websocket-client==1.4.2
-widgetsnbextension==3.5.2
-zipp==3.11.0
+streamlit
+biotite
+stmol
+py3Dmol
